Show tasks and form.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<script type="text/javascript" src="bower_components/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular-base64/angular-base64.js"></script>
 	<script type="text/javascript" src="bower_components/angular-base64/angular-base64.min.js"></script>
-	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
-	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+
 
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/app.route.js"></script>
@@ -21,8 +20,15 @@
 	<script type="text/javascript" src="app/home/home.module.js"></script>
 	<script type="text/javascript" src="app/home/home.route.js"></script>
 	<script type="text/javascript" src="app/home/home.controller.js"></script>
+
+	<script type="text/javascript" src="app/task/task.module.js"></script>
+	<script type="text/javascript" src="app/task/task.route.js"></script>
+	<script type="text/javascript" src="app/task/task.controller.js"></script>
 </head>
 <body ng-app="upp">
+
+<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 	<div ui-view name="navbar"></div>
     <div ui-view name="content"></div>
     <div ui-view name="footer"></div>
