--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,3 +1,14 @@
 <div>
-	
+	<div class="container">
+		<section class="section">
+			<div class="row" ng-repeat="task in hoc.tasks">
+				<div class="col-md-3">
+					<p class="p-text">{{task.name}}</p>
+				</div>
+				<div class="col-md-1">
+					<button class="btn btn-primary" type="submit" ng-click="hoc.zadatak(task.id)">Pogledaj</button>
+				</div>
+			</div>
+		</section>
+	</div>
 </div>
