--- a/app/content.html
+++ b/app/content.html
@@ -1,5 +1,58 @@
-<div>
+<!--<div>
 	<input type="text" placeholder="Username" ng-model="apc.username">
 	<input type="password" placeholder="Password" ng-model="apc.password">
 	<input type="button" value="Login" ng-click="apc.login()">
+</div>-->
+<div class="login-wrap">
+	<div class="login-html">
+		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+		
+		<div class="login-form">
+			<form name="lic.login.form">
+				<div class="sign-in-htm">
+					<div class="group">
+						<label for="user" class="label">Username</label>
+						<input id="user" ng-model="apc.username" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Password</label>
+						<input id="pass" ng-model="apc.password" type="password" class="input" data-type="password">
+					</div>
+					<div class="hr"></div>
+					<div class="group">
+						<input type="submit" class="button" value="Sign In" ng-click="apc.login()">
+					</div>
+				</div>
+			</form>
+			<!--<form name="loc.singup.form">
+				<div class="sign-up-htm">
+					<div class="group">
+						<label for="firstname" class="label">Firstname</label>
+						<input id="firstname" ng-model="user.firstname" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="lastname" class="label">Lastname</label>
+						<input id="lastname" ng-model="user.lastname" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="user" class="label">Username</label>
+						<input id="user" ng-model="user.username" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Password</label>
+						<input id="pass" ng-model="user.password" type="password" class="input" data-type="password">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Email Address</label>
+						<input id="pass" ng-model="user.email" type="text" class="input">
+					</div>
+					<div class="hr"></div>
+					<div class="group">
+						<input type="submit" class="button" value="Sign Up" ng-click="lic.singup()">
+					</div>
+				</div>
+			</form>-->
+		</div>
+	</div>
 </div>
