--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Activiti</title>
+
+	<link rel="stylesheet" href="assets/css/magister.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
   	<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   	<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -11,7 +15,8 @@
 	<script type="text/javascript" src="bower_components/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular-base64/angular-base64.js"></script>
 	<script type="text/javascript" src="bower_components/angular-base64/angular-base64.min.js"></script>
-
+	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/app.route.js"></script>
@@ -26,9 +31,6 @@
 	<script type="text/javascript" src="app/task/task.controller.js"></script>
 </head>
 <body ng-app="upp">
-
-<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
-	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 	<div ui-view name="navbar"></div>
     <div ui-view name="content"></div>
     <div ui-view name="footer"></div>
