--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,14 +1,18 @@
-<div>
-	<div class="container">
-		<section class="section">
-			<div class="row" ng-repeat="task in hoc.tasks">
-				<div class="col-md-3">
+<div>	
+	<section class="section" id="profile">
+		<div class="container okvir">
+		
+			<h3 class="text-center title">Zadaci</h3>
+			
+			<div class="row" ng-repeat="task in hoc.tasks" >
+				<br/>
+				<div class="col-md-3 col-md-offset-3">
 					<p class="p-text">{{task.name}}</p>
-				</div>
+				</div>	
 				<div class="col-md-1">
 					<button class="btn btn-primary" type="submit" ng-click="hoc.zadatak(task.id)">Pogledaj</button>
 				</div>
-			</div>
-		</section>
-	</div>
+			</div>	
+		</div>
+	</section>
 </div>
