--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 	<script type="text/javascript" src="app/task/task.module.js"></script>
 	<script type="text/javascript" src="app/task/task.route.js"></script>
 	<script type="text/javascript" src="app/task/task.controller.js"></script>
+
+	<script type="text/javascript" src="app/candidate/candidate.module.js"></script>
+	<script type="text/javascript" src="app/candidate/candidate.route.js"></script>
+	<script type="text/javascript" src="app/candidate/candidate.controller.js"></script>
 </head>
 <body ng-app="upp">
 	<div ui-view name="navbar"></div>
