Added phd remarks and other minnor changes on controller

--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -3,8 +3,10 @@
 		<div class="dropdown">
 			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a ng-click="hoc.mojiZadaci()">Zadaci</a></li>
-				<li><a ng-click="hoc.zadaciZaPreuzimanje()">Zadaci za preuzimanje</a></li>
+				<li><a ng-click="nac.mojiZadaci()">Zadaci</a></li>
+				<li><a ng-click="nac.zadaciZaPreuzimanje()">Zadaci za preuzimanje</a></li>
+				<li><a ng-click="nac.doktorati()">Javno dostupni doktorati</a></li>
+				<li><a ng-click="nac.logout()">Odjavljivanje</a></li>
 			</ul>
 		</div>
 	</div>
