--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 	<script type="text/javascript" src="app/candidate/candidate.module.js"></script>
 	<script type="text/javascript" src="app/candidate/candidate.route.js"></script>
 	<script type="text/javascript" src="app/candidate/candidate.controller.js"></script>
+
+	<script type="text/javascript" src="app/doktorati/doktorati.module.js"></script>
+	<script type="text/javascript" src="app/doktorati/doktorati.route.js"></script>
+	<script type="text/javascript" src="app/doktorati/doktorati.controller.js"></script>
+
+	<script type="text/javascript" src="app/navbar/navbar.module.js"></script>
+	<script type="text/javascript" src="app/navbar/navbar.controller.js"></script>
 </head>
 <body ng-app="upp">
 	<div ui-view name="navbar"></div>
