--- a/app/home/home.html
+++ b/app/home/home.html
@@ -10,7 +10,7 @@
 					<p class="p-text">{{task.name}}</p>
 				</div>	
 				<div class="col-md-1">
-					<button class="btn btn-primary" type="submit" ng-click="hoc.zadatak(task.id)">Pogledaj</button>
+					<button class="btn btn-primary" type="submit" ng-click="hoc.zadatak(task.processInstanceId, task.id)">Pogledaj</button>
 				</div>
 			</div>	
 		</div>
