--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<link rel="stylesheet" href="assets/css/magister.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="bower_components/angular-datapicker/dist/angular-datapicker.css">
 
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
   	<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -26,6 +27,8 @@
 	<script type="text/javascript" src="bower_components/angular-base64/angular-base64.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
 	<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+	<script type="text/javascript" src="bower_components/angular-datapicker/dist/angular-datapicker.js"></script>
+	<script type="text/javascript" src="bower_components/angular-datapicker/dist/angular-datapicker.min.js"></script>
 
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/app.route.js"></script>
